<resources>
    <string name="app_name">calculator</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="nol">0</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="kali">x</string>
    <string name="bagi">/</string>
    <string name="titik">.</string>
    <string name="income">income</string>
    <string name="outcome">outcome</string>
    <string name="hapus">c</string>
    <string name="balance">Balance :</string>
    <string name="val">Val</string>
</resources>
