<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nanark.calculator.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/income"
            android:layout_marginTop="10dp"
            android:id="@+id/editText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/outcome"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:id="@+id/editText2" />

        <TextView
            android:text="@string/balance"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="100dp"
            android:id="@+id/textView" />

        <TextView
            android:hint="@string/val"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="90dp"
            android:id="@+id/textView2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">

            <android.support.design.widget.CoordinatorLayout

                android:layout_width="match_parent"
                android:layout_height="64dp">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_marginTop="50dp"
                    android:layout_margin="@dimen/fab_margin"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

            </android.support.design.widget.CoordinatorLayout>


        </FrameLayout>


    </FrameLayout>






    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/satu"
                android:id="@+id/btn_tbl1"
                android:onClick="onButtonClik"
                style="@style/satu" />

            <Button
                android:text="@string/dua"
                android:id="@+id/btn_tbl2"
                style="@style/dua" />

            <Button
                android:text="@string/tiga"
                android:id="@+id/btn_tbl3"
                style="@style/tiga" />

            <Button
                android:text="@string/plus"
                android:id="@+id/btn_tbltambah"
                style="@style/tambah" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp">

            <Button

                android:text="@string/empat"
                style="@style/empat"
                android:id="@+id/butto5" />

            <Button
                android:text="@string/lima"
                style="@style/lima"
                android:id="@+id/button6" />

            <Button
                android:text="@string/enam"
                style="@style/enam"
                android:id="@+id/button7" />

            <Button
                android:text="@string/min"
                style="@style/kurang"
                android:id="@+id/button8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">
            <Button

                android:text="@string/tujuh"
                style="@style/tujuh"
                android:id="@+id/button9" />

            <Button
                android:text="@string/delapan"
                style="@style/delapan"
                android:id="@+id/button10" />

            <Button
                android:text="@string/sembilan"
                style="@style/sembilan"
                android:id="@+id/button11" />

            <Button
                android:text="@string/kali"
                style="@style/kali"
                android:id="@+id/button12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="225dp">

            <Button

                android:text="@string/titik"
                style="@style/titik"
                android:id="@+id/button13" />

            <Button
                android:text="@string/nol"
                style="@style/nol"
                android:id="@+id/button14" />

            <Button
                android:text="@string/hapus"
                style="@style/hapus"
                android:id="@+id/button15" />

            <Button
                android:text="@string/bagi"
                style="@style/bagi"
                android:id="@+id/button16" />

        </LinearLayout>

    </FrameLayout>






</RelativeLayout>
